// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPackages base frontend + react 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "react-dom@latest",
    "react@latest",
    "regenerator-runtime@latest",
  ],
  "devDependencies": Array [
    "@babel/core@7",
    "@babel/preset-env@7",
    "@babel/preset-react@latest",
    "@babel/preset-typescript@7",
    "@lionbyte/eslint-config@latest",
    "@pmmmwh/react-refresh-webpack-plugin",
    "@types/jest@27",
    "@types/node@latest",
    "@types/react-dom@latest",
    "@types/react@latest",
    "@types/webpack-bundle-analyzer@4",
    "@types/webpack-dev-server@4",
    "@types/webpack@5",
    "autoprefixer@10",
    "babel-jest@27",
    "babel-loader@latest",
    "css-loader@6",
    "cssnano@5",
    "eslint@7",
    "html-webpack-plugin@5",
    "jest-runner-eslint@0.10",
    "jest@27",
    "less-loader@10",
    "less@4",
    "mini-css-extract-plugin@2",
    "postcss-loader@6",
    "prettier@2",
    "react-refresh",
    "typescript@latest",
    "webpack-bundle-analyzer@4",
    "webpack-cli@4",
    "webpack-dev-server@4",
    "webpack-merge@5",
    "webpack@5",
  ],
}
`;

exports[`getPackages base frontend 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "regenerator-runtime@latest",
  ],
  "devDependencies": Array [
    "@babel/core@7",
    "@babel/preset-env@7",
    "@babel/preset-typescript@7",
    "@lionbyte/eslint-config@latest",
    "@types/jest@27",
    "@types/node@latest",
    "@types/webpack-bundle-analyzer@4",
    "@types/webpack-dev-server@4",
    "@types/webpack@5",
    "autoprefixer@10",
    "babel-jest@27",
    "babel-loader@latest",
    "css-loader@6",
    "cssnano@5",
    "eslint@7",
    "html-webpack-plugin@5",
    "jest-runner-eslint@0.10",
    "jest@27",
    "less-loader@10",
    "less@4",
    "mini-css-extract-plugin@2",
    "postcss-loader@6",
    "prettier@2",
    "typescript@latest",
    "webpack-bundle-analyzer@4",
    "webpack-cli@4",
    "webpack-dev-server@4",
    "webpack-merge@5",
    "webpack@5",
  ],
}
`;

exports[`getPackages base node + git hooks 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config@latest",
    "@types/jest@27",
    "@types/node@latest",
    "eslint@7",
    "husky@4",
    "jest-runner-eslint@0.10",
    "jest@27",
    "lint-staged@latest",
    "prettier@2",
    "typescript@latest",
  ],
}
`;

exports[`getPackages base node 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config@latest",
    "@types/jest@27",
    "@types/node@latest",
    "eslint@7",
    "jest-runner-eslint@0.10",
    "jest@27",
    "prettier@2",
    "typescript@latest",
  ],
}
`;
